# CodeAtlas

./: README.md  README2.md  vercel.json
backend/: .env.example  .gitignore  config.py  dev.py  main.py  pyproject.toml
backend/models/: schemas.py
backend/routes/: chat.py  diagrams.py  repo.py
backend/services/: chunker.py  cloner.py  diagram_generator.py  parser.py  rag.py  repo_store.py  vector_store.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/repo/[id]/: page.tsx
scripts/: create_commit_series.ps1
